--- a/BookingsAPIUsingMigrator.migrator/appsettings.json
+++ b/BookingsAPIUsingMigrator.migrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "DbSettings": {
-    "Database": "Booking",
+    "Database": "Booking_New",
     "Host": "localhost",
     "Username": "postgres",
     "Password": "password"
