--- a/BookingsAPIUsingMigrator.core/BookingsAPIUsingMigrator.core.csproj
+++ b/BookingsAPIUsingMigrator.core/BookingsAPIUsingMigrator.core.csproj
@@ -6,4 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="MediatR" Version="12.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="8.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BookingsAPIUsingMigrator.dataaccess\BookingsAPIUsingMigrator.dataaccess.csproj" />
+    <ProjectReference Include="..\BookingsAPIUsingMigrator.shared\BookingsAPIUsingMigrator.shared.csproj" />
+  </ItemGroup>
+
 </Project>
